<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/vertical_hfill_vfill"
	android:background="@color/negro">
	
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="80px"
	    android:background="@color/negro" >
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal" >
		    
		    <ImageView
		        android:id="@+id/background"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_alignParentBottom="true"
		        android:background="@drawable/tiled_background" />
		    
		    <ImageView 
		        android:id="@+id/prcLogo"
		        android:layout_height="80px"
				android:layout_width="wrap_content"
				android:src="@drawable/logo_letters"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"/>
		    
		    <LinearLayout 
		        style="@style/horizontal_hfill_vfill"
		        android:layout_toRightOf="@id/prcLogo"
		        android:gravity="right"
		        android:paddingRight="10dp"
		        android:layout_height="80px">
		        
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:background="@layout/save_button"
		            android:drawableLeft="@drawable/ic_save"
		            android:onClick="onSaveChangesClick"
		            android:paddingBottom="4dp"
		            android:paddingLeft="4dp"
		            android:paddingRight="10dp"
		            android:paddingTop="4dp"
		            android:text="Save Changes"
		            android:textColor="@color/blanco" />
			</LinearLayout>    
	    </RelativeLayout>      
	</LinearLayout>
	
	<TextView
	    android:id="@+id/smartphoneSettingsTitle" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:text="@string/smartphone_settings_label"
		android:textColor="#dfdfdf"
		android:textSize="25sp"
		android:gravity="left"
		android:padding="15dp"
		android:background="@layout/background_label2" />
	
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
	    <LinearLayout 
	        style="@style/vertical_hfill_vfill"
	        android:paddingBottom="15dp">
	        
	        <RelativeLayout 
			    style="@style/vertical_hfill_vfill"
			    android:gravity="center"
			    android:paddingTop="10dp"
			    android:paddingBottom="10dp">
			    
				<TextView 
				    android:id="@+id/textViewDeviceName" 
				    style="@style/texto_estandar"
					android:text="@string/device_name_label"
					android:paddingRight="10dp"
					android:textColor="@color/blanco" />
			    
				<EditText 
				    android:id="@+id/editTextDeviceName"
					android:layout_width="250dp" 
					android:layout_height="wrap_content"
					android:singleLine="true" 
					android:layout_below="@id/textViewDeviceName" />
				
				<TextView 
				    android:id="@+id/textViewSpeedLimit" 
				    style="@style/texto_estandar"
					android:text="@string/speed_limit_label" 
					android:layout_below="@+id/editTextDeviceName"
					android:textColor="@color/blanco" />	
					
				<EditText 
				    android:id="@+id/editTextSpeedLimit"
					android:layout_width="250dp" 
					android:layout_height="wrap_content"
					android:singleLine="true" 
					android:layout_below="@id/textViewSpeedLimit" />	
					
				<TextView 
				    android:id="@+id/textViewBlockPhone" 
				    style="@style/texto_estandar"
					android:text="@string/block_phone_label" 
					android:layout_below="@+id/editTextSpeedLimit"
					android:textColor="@color/blanco" />	
					
				<Button 
				    android:id="@+id/buttonBlockPhone"
				    android:text="@string/block_phone_button_label"
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onBlockPhoneClick"
					android:layout_below="@+id/textViewBlockPhone" />
				
				<TextView 
				    android:id="@+id/textViewRestorePhone" 
				    style="@style/texto_estandar"
					android:text="@string/restore_phone_label" 
					android:layout_below="@+id/buttonBlockPhone"
					android:textColor="@color/blanco" />	
					
				<Button 
				    android:id="@+id/buttonRestorePhone"
				    android:text="@string/restore_phone_button_label"
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onRestorePhoneClick"
					android:layout_below="@+id/textViewRestorePhone" />
					
			</RelativeLayout>
			
	        <LinearLayout 
			    android:id="@+id/buttonContainer" 
			    style="@style/horizontal_hfill_vwrap"
				android:gravity="center_horizontal" 
				android:paddingTop="25dip"
				android:paddingBottom="2dip">
				
				<Button 
				    android:text="@string/save_changes_button_label"
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onSaveSettingsClick" />
				
				<Button 
				    android:text="@string/cancel_button_label" 
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onCancelClick" />
			</LinearLayout>
	    </LinearLayout>
	</ScrollView>				
</LinearLayout>