<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/vertical_hfill_vfill"
	android:background="@color/negro">
	
	<LinearLayout 
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="80px"
	    android:background="@color/negro" >
	    
	    <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_gravity="center_horizontal" >
		    
		    <ImageView
		        android:id="@+id/background"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_alignParentBottom="true"
		        android:background="@drawable/tiled_background" />
		    
		    <ImageView 
		        android:id="@+id/prcLogo"
		        android:layout_height="80px"
				android:layout_width="wrap_content"
				android:src="@drawable/logo_letters"
				android:paddingTop="10dp"
				android:paddingBottom="10dp"
				android:paddingLeft="10dp"/>
		    
		    <LinearLayout 
		        style="@style/horizontal_hfill_vfill"
		        android:layout_toRightOf="@id/prcLogo"
		        android:gravity="right"
		        android:paddingRight="10dp"
		        android:layout_height="80px">
		        
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_vertical"
		            android:background="@layout/save_button"
		            android:drawableLeft="@drawable/ic_save"
		            android:onClick="onSaveChangesClick"
		            android:paddingBottom="4dp"
		            android:paddingLeft="4dp"
		            android:paddingRight="10dp"
		            android:paddingTop="4dp"
		            android:text="Save Changes"
		            android:textColor="@color/blanco" />
			</LinearLayout>    
	    </RelativeLayout>      
	</LinearLayout>
	
	<TextView
	    android:id="@+id/newEmergencyContactTitle" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
		android:text="@string/new_emergency_contact_label"
		android:textColor="#dfdfdf"
		android:textSize="25sp"
		android:gravity="left"
		android:padding="15dp"
		android:background="@layout/background_label2" />
	
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" >
	    
	    <LinearLayout 
	        style="@style/vertical_hfill_vfill"
	        android:paddingBottom="15dp">
	        
	        <RelativeLayout 
			    style="@style/vertical_hfill_vfill"
			    android:gravity="center"
			    android:paddingTop="10dp"
			    android:paddingBottom="10dp">
			    
				<TextView 
				    android:id="@+id/textViewCountry" 
				    style="@style/texto_estandar"
					android:text="@string/country_label"
					android:paddingRight="10dp"
					android:textColor="@color/blanco" />
			    
				<Spinner 
			        android:id="@+id/spinnerCountry"
			        android:layout_width="250dp"
			        android:layout_height="wrap_content"
			        android:layout_below="@id/textViewCountry"
			        android:prompt="@string/country_prompt"
			        android:entries="@array/country_options" />
				
				<TextView 
				    android:id="@+id/textViewPhoneNumber" 
				    style="@style/texto_estandar"
					android:text="@string/phone_number_label" 
					android:layout_below="@+id/spinnerCountry"
					android:textColor="@color/blanco" />	
					
				<EditText 
				    android:id="@+id/editTextPhoneNumber"
					android:layout_width="250dp" 
					android:layout_height="wrap_content"
					android:singleLine="true" 
					android:layout_below="@id/textViewPhoneNumber" />	
					
				<TextView 
				    android:id="@+id/textViewDescription" 
				    style="@style/texto_estandar"
					android:text="@string/description_label" 
					android:layout_below="@+id/editTextPhoneNumber"
					android:textColor="@color/blanco" />	
					
				<EditText 
				    android:id="@+id/editTextDescription"
					android:layout_width="250dp" 
					android:layout_height="wrap_content"
					android:singleLine="true" 
					android:layout_below="@id/textViewDescription" />
					
			</RelativeLayout>
			
	        <LinearLayout 
			    android:id="@+id/buttonContainer" 
			    style="@style/horizontal_hfill_vwrap"
				android:gravity="center_horizontal" 
				android:paddingTop="25dip"
				android:paddingBottom="2dip">
				
				<Button 
				    android:text="@string/save_contact_button_label"
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onSaveContactClick" />
				
				<Button 
				    android:text="@string/cancel_button_label" 
				    android:layout_width="140dp"
					android:layout_height="wrap_content" 
					android:onClick="onCancelClick" />
			</LinearLayout>
	    </LinearLayout>
	</ScrollView>				
</LinearLayout>